@@ -261,6 +261,8 @@ module Rufus
 
       return %w[ L ] if item == 'L'
 
+      item = '*' + item if item.match(/^\//)
+
       m = item.match(RANGE_REGEX)
 
       raise ArgumentError.new(
