@@ -2,6 +2,11 @@
 = rufus-scheduler CHANGELOG.txt
 
 
+== rufus-scheduler - 2.0.22    not yet released
+
+- parse "/10 * * * *" again (like <= 2.0.19 did), thanks @skrd
+
+
 == rufus-scheduler - 2.0.21    released 2013/07/15
 
 - add license (MIT) to gemspec file
